--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "three": "^0.139.2"
     },
     "devDependencies": {
+        "@types/three": "^0.140.0",
         "eslint": "^8.14.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-standard": "^17.0.0",
