House built from scratch

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
     "liveServer.settings.ignoreFiles" : [
             ".vscode/**",
             "**/*.scss",
-            "**/*.sass",
+            "**/*.sass"
     ]
 
 }
