--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cg-project",
   "version": "1.0.0",
   "description": "Project developed for Computer Graphics class",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
