--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "cg-project",
   "version": "1.0.0",
+  "module": "index.ts",
+  "type": "module",
+  "devDependencies": {
+    "@types/bun": "latest",
+    "bun-plugin-html": "^1.3.4"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
   "dependencies": {
-    "three": "^0.141.0",
-    "three-csg-ts": "^3.1.10"
+    "three": "^0.160.1",
+    "three-csg-ts": "^3.1.13",
+    "three-stdlib": "^2.29.4"
   }
 }
